Refactor the code base